<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/cardgt8"
    android:layout_marginBottom="8dp"
    android:layout_marginRight="6dp"
    android:layout_marginLeft="6dp"
    android:clickable="true">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/andika"
                android:text="@string/fdxf"
                android:textAllCaps="true"
                android:textColor="#00688B"
                android:textSize="15sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="38dp"
                android:src="@drawable/food2"
                android:layout_marginStart="10dp"
                android:id="@+id/food"/>
            <TextView
                android:layout_width="220dp"
                android:layout_height="20dp"
                android:textSize="15sp"
                android:id="@+id/type"
                android:textStyle="bold"
                android:layout_toEndOf="@+id/food"
                android:layout_marginStart="5dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="4dp"
                android:textColor="#00688B"
                android:text="@string/card_view"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="78dp"
                android:paddingBottom="5dp"
                android:src="@drawable/calories1"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:id="@+id/calories"
                android:textStyle="bold"
                android:paddingBottom="5dp"
                android:layout_toEndOf="@+id/food"
                android:layout_marginStart="5dp"
                android:layout_marginTop="85dp"
                android:textColor="@color/red"
                android:text="@string/card_view"/>

            <TextView
                android:id="@+id/cal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="85dp"
                android:paddingBottom="5dp"
                android:layout_toEndOf="@+id/calories"
                android:text="@string/calories"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/addFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_alignBottom="@+id/type"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="299dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="-28dp"
                android:background="@drawable/custom_button"
                android:text="@string/add"
                android:textColor="#00688B"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>